--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -72,6 +72,8 @@
         <div class="col s5 input-field">
             <input type="text" id="rtspStream" class="value" placeholder="rtsp://STREAM.IP/XY"/>
             <label for="rtspStream" class="translate">Rtsp Stream</label>
+            <input type="text" id="port" class="value" placeholder="PORT (z.B. 9999)"/>
+            <label for="port" class="translate">Port</label>
         </div>
     </div>
 </div>
