--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -74,8 +74,8 @@
     </div>
     <div class="row">
         <div class="col s5 input-field">
-            <input type="text" id="rtspStream" class="value" placeholder="rtsp://STREAM.IP/XY"/>
-            <label for="rtspStream" class="translate">Rtsp Stream</label>
+            <input type="text" id="rtspUrl" class="value" placeholder="rtsp://STREAM.IP/XY"/>
+            <label for="rtspUrl" class="translate">Rtsp Stream</label>
             <input type="text" id="port" class="value" placeholder="PORT (z.B. 9999)"/>
             <label for="port" class="translate">Port</label>
         </div>
