correct placeholder as json-example.

--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -147,7 +147,7 @@
             <p><label for="resolution" class="translate">Resolution</label></p>
         </div>
         <div class="col s5 input-field">
-            <input type="text" id="ffmpegOptions" class="value" placeholder="{'-r':30}"/>
+            <input type="text" id="ffmpegOptions" class="value" placeholder='{"-r":30}'/>
             <p><label for="ffmpegOptions" class="translate">Additional ffmpeg Options (as JSON)</label></p>
         </div>
         <div class="col s2 input-field">
