Change name of port to prevent from misconfiguration

--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -140,7 +140,7 @@
         </div>
         <div class="col s4 input-field">
             <input type="text" id="tcpPort" class="value" placeholder="554"/>
-            <p><label for="tcpPort" class="translate">TCP Port</label></p>
+            <p><label for="tcpPort" class="translate">Adapter Port</label></p>
         </div>
         <div class="col s3 input-field">
             <input type="text" id="resolution" class="value" placeholder="1920x1080"/>
